--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@okta/jwt-verifier": "^1.0.0",
     "@okta/oidc-middleware": "^2.1.0",
+    "@onfido/api": "^1.1.0",
     "atob": "^2.1.2",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
