--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@gompa/node-sass-middleware": "^0.12.0",
     "@okta/jwt-verifier": "^1.0.0",
-    "@okta/oidc-middleware": "^2.1.0",
+    "@okta/oidc-middleware": "^4.4.0",
     "@onfido/api": "^1.1.0",
     "atob": "^2.1.2",
     "axios": "^0.21.1",
@@ -25,8 +26,6 @@
     "govuk-frontend": "^3.4.0",
     "http-errors": "^1.7.3",
     "multer": "^1.4.3",
-    "node-sass": "^4.13.1",
-    "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.1",
     "nunjucks": "^3.2.0",
     "stream-buffers": "^3.0.2"
