Added user analytics tracking with mixpanel
Need to identify the users of this demo, added env var ENABLE_ANALYTICS which when set requires that MIXPANEL_TOKEN is provided events on usage are then fed to the atko mixpanel instance

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.0",
     "govuk-frontend": "^3.4.0",
     "http-errors": "^1.7.3",
+    "mixpanel": "^0.14.0",
     "multer": "^1.4.3",
     "nodemon": "^2.0.1",
     "nunjucks": "^3.2.0",
